<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAzur"
            tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAzur"
            android:orientation="vertical">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                app:cardCornerRadius="4dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:text="@string/daftar"
                        android:textSize="30sp"
                        android:textStyle="bold"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="40dp">

                    <EditText
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittextstyle"
                            android:hint="@string/user"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="40dp">

                    <EditText
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittextstyle"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="40dp">

                    <EditText
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittextstyle"
                            android:hint="@string/pass"
                            android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>


                <androidx.cardview.widget.CardView
                        android:id="@+id/btn_cv_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/activity_vertical_layout"
                        android:clickable="true"
                        android:drawSelectorOnTop="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:textColor="@color/colorWhite"
                        app:cardBackgroundColor="@color/colorPrimary"
                        app:cardCornerRadius="28dp">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:paddingStart="32sp"
                            android:paddingEnd="32sp"
                            android:text="@string/daftar"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                </androidx.cardview.widget.CardView>


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorPrimary"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/activity_vertical_layout"
                            android:text="Sign Up With Social Media"
                            android:textColor="@color/colorWhite"
                            android:textSize="25sp"/>

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="@dimen/activity_vertical_layout"
                            android:orientation="horizontal">

                        <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginTop="@dimen/activity_vertical_layout"
                                android:src="@drawable/fb"/>

                        <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="@dimen/activity_vertical_layout"
                                android:layout_marginEnd="20dp"
                                android:src="@drawable/in"/>

                        <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginTop="@dimen/activity_vertical_layout"
                                android:src="@drawable/tw"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>